// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Media /> renders correctly with className 1`] = `
<div>
  <div
    class="media hello-world"
  >
    <div
      class=""
      src="https://player.vimeo.com/video/263419265"
      style="width: 640px; height: 360px;"
    />
  </div>
</div>
`;

exports[`<Media /> renders correctly with config 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
      src="https://player.vimeo.com/video/263419265"
      style="width: 640px; height: 360px;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders correctly with data-testid 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
      data-testid="helloWorld"
      src="https://player.vimeo.com/video/263419265"
      style="width: 640px; height: 360px;"
    >
      <div
        style="width: 100%; height: 100%; overflow: hidden;"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders correctly with default prop 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
    >
      <iframe
        frameborder="0"
        scrolling="no"
        src="https://player.vimeo.com/video/263419265"
        title="media"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders correctly with iframe and responsive 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class="media-player--embed"
      data-testid="helloWorld"
      src="https://ssl.caranddriving.com/cdwebsite/player.aspx?id=8221&cid=autorama&responsive=true"
      style="width: 640px; height: 360px;"
    />
  </div>
</div>
`;

exports[`<Media /> renders youtube player correctly after click on thumb 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
    >
      <iframe
        frameborder="0"
        height="360px"
        scrolling="no"
        src="https://www.youtube.com/embed/hZVXqcKEBmQ"
        title="media"
        width="100%"
      />
    </div>
  </div>
</div>
`;

exports[`<Media /> renders youtube thumb correctly 1`] = `
<div>
  <div
    class="media"
  >
    <div
      class=""
    >
      <div
        class="preview-wrapper"
        role="img"
      >
        <div
          aria-label="Play"
          class="play-btn"
          role="button"
        />
        <div
          class="image -expand"
        >
          <img
            class="image--native"
            data-cfasync="false"
            loading="eager"
            sizes="(min-width:320px) 800px, 1200px"
            src="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1920,width=1920,quality=75,sharpness=0,metadata=none/https://img.youtube.com/vi_webp/hZVXqcKEBmQ/sddefault.webp"
            srcset="https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=320,width=320,quality=60,sharpness=0,metadata=none/https://img.youtube.com/vi_webp/hZVXqcKEBmQ/sddefault.webp 320w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=800,width=800,quality=70,sharpness=0,metadata=none/https://img.youtube.com/vi_webp/hZVXqcKEBmQ/sddefault.webp 800w, https://dev.vanarama-nonprod.com/cdn-cgi/image/fit=scale-down,height=1200,width=1200,quality=75,sharpness=0,metadata=none/https://img.youtube.com/vi_webp/hZVXqcKEBmQ/sddefault.webp 1200w"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
